--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-static/* linguist-vendored
+*.js linguist-detectable=false *.js linguist-language=js *.dart linguist-detectable=true JavaScript/* linguist-vendored build/* linguist-vendored
